--- a/index.html
+++ b/index.html
@@ -10,38 +10,53 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
     <link rel="stylesheet" href="./Assets/css/style.css" />
+    <link rel="stylesheet" href="./Assets/css/mediaquery.css">
     <title>PORTFOLIO</title>
 </head>
 
 <body>
     <!-- The Header begins -->
-    <header class="overlay">
-        <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">RESUME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">CONTACT</a></li>
+    <header class="overlay" id="home">
+        <section class="overlay">
+            <nav class="show">
+                <ul>
+                    <li><a href="#home" class="linktext">HOME</a></li>
+                    <li><a href="#portfolio" class="a">PORTFOLIO</a></li>
+                    <li><a href="#resume" class="b">RESUME</a></li>
+                    <li><a href="#about" class="c">ABOUT</a></li>
+                    <li><a href="#contact" class="d">CONTACT</a></li>
+                </ul>
+            </nav>
+            <div class="navbar">
+                <div class="menu1">
+                <button class="menu-toggle"><i class="uil uil-bars"></i></button>
+                 </div>
+               <ul class="menu">
+                <li><a href="#home" class="linktext">HOME</a></li>
+                <li><a href="#portfolio" class="a">PORTFOLIO</a></li>
+                <li><a href="#resume" class="b">RESUME</a></li>
+                <li><a href="#about" class="c">ABOUT</a></li>
+                <li><a href="#contact" class="d">CONTACT</a></li>
             </ul>
-        </nav>
-        <div>
-            <h4>Hello, I'm</h4>
-            <h1>Obisike Maxwell</h1>
-            <p>AND THIS IS MY REZUME</p>
-        </div>
+            </div>
+            <div>
+                <h4>Hello, I'm</h4>
+                <h1>Obisike Maxwell</h1>
+                <p>AND THIS IS MY REZUME</p>
+            </div>
+        </section>
     </header>
     <!-- The Header ends-->
 
     <!-- Secotion1 Begins-->
-    <section class="section1">
+    <section class="section1" id="portfolio">
         <h1>Featured <span>Portfolio</span></h1>
         <ul>
             <li><a href="#">All</a></li>
-            <li><a href="#">Packaging</a></li>
-            <li><a href="#">Mockup</a></li>
-            <li><a href="#">Typography</a></li>
-            <li><a href="#">Photograpy</a></li>
+            <li><a href="##">Packaging</a></li>
+            <li><a href="###">Mockup</a></li>
+            <li><a href="####">Typography</a></li>
+            <li><a href="######">Photograpy</a></li>
         </ul>
         <div class="grids">
             <div class="griditems">
@@ -79,90 +94,96 @@
     <!-- Section1 ends-->
 
     <!-- Section2 begins-->
-    <section class="section2">
+    <section class="section2" id="resume">
         <h1>My <span>Resume</span></h1>
-        <div class="resume">
-            <p>Education</p>
-            <p>Experience</p>
-        </div>
-        <div class="grids">
-            <div class="griditems item1">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Masteral in Information Technology</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Enugu state University.</h5>
+        <div class="container">
+            <div class="item1">
+                <p class="p1">Education</p>
+                <div class="flexitems item1">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Masteral in Information Technology</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Enugu state University.</h5>
+                </div>
+                <div class="flexitems item3">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Masteral in Information Technology</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Enugu state University.</h5>
+                </div>
+                <div class="flexitems item5">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Masteral in Information Technology</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Enugu state University.</h5>
+                </div>
+                <div class="flexitems item7">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Masteral in Information Technology</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Enugu state University.</h5>
+                </div>
             </div>
-            <div class="griditems item2">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Lead Product Designer</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Github</h5>
-            </div>
-            <div class="griditems item3">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Masteral in Information Technology</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Enugu state University.</h5>
-            </div>
-            <div class="griditems item4">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Lead Product Designer</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Facebook</h5>
-            </div>
-            <div class="griditems item5">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Masteral in Information Technology</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Enugu state University.</h5>
-            </div>
-            <div class="griditems item6">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Lead Product Designer</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Twitter</h5>
-            </div>
-            <div class="griditems item7">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Masteral in Information Technology</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Enugu state University.</h5>
-            </div>
-            <div class="griditems item8">
-                <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
-                <h2>Lead Product Designer</h2>
-                <p>
-                    Even the all-powerful Pointing has no control about the blind texts
-                    it is an almost unorthographic.
-                </p>
-                <h5>Shopify</h5>
+            <div class="item2">
+                <p class="p1">Experience</p>
+                <div class="flexitems item2">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Lead Product Designer</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Github</h5>
+                </div>
+
+                <div class="flexitems item4">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Lead Product Designer</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Facebook</h5>
+                </div>
+
+                <div class="flexitems item6">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Lead Product Designer</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Twitter</h5>
+                </div>
+
+                <div class="flexitems item8">
+                    <h3><i class="uil uil-calender"></i> March 2013-Present</h3>
+                    <h2>Lead Product Designer</h2>
+                    <p>
+                        Even the all-powerful Pointing has no control about the blind texts
+                        it is an almost unorthographic.
+                    </p>
+                    <h5>Shopify</h5>
+                </div>
             </div>
         </div>
     </section>
     <!-- Section2 ends-->
+
     <!-- Section3 begins-->
-    <section class="section3">
+    <section class="section3" id="about">
         <div class="container">
             <div class="imgdiv"></div>
             <div class="textdiv">
@@ -185,8 +206,10 @@
                 <button class="btn2">DOWNLOAD CV</button>
             </div>
         </div>
-        <!-- Section3 ends-->
     </section>
+    <!-- Section3 ends-->
+
+
     <!-- Section4 Begins-->
     <section class="section4">
         <h1>Client <span>Testimonial</span></h1>
@@ -203,7 +226,6 @@
                     <h4>— Ethan McCown, CEO <span>XYZ Inc.</span></h4>
                 </div>
             </div>
-
             <div class="flexitem1">
                 <div class="person2"></div>
                 <div class="text-con">
@@ -217,7 +239,7 @@
                 </div>
             </div>
         </div>
-        <div class="flexitem2">
+        <div class="flexitem">
             <div class="flexitem1">
                 <div class="person3"></div>
                 <div class="text-con">
@@ -230,7 +252,6 @@
                     <h4>— Ethan McCown, CEO <span>XYZ Inc.</span></h4>
                 </div>
             </div>
-
             <div class="flexitem1">
                 <div class="person4"></div>
                 <div class="text-con">
@@ -246,6 +267,8 @@
         </div>
     </section>
     <!-- Section4 ends-->
+
+
     <!-- Section5 begins-->
     <section class="section5">
         <h1>My <span>Services</span></h1>
@@ -291,7 +314,7 @@
                     <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
                         unorthographic.</p>
                     <div class="date">
-                        <a href="#"id="foot"><i class="uil uil-calender"></i>Aug 7,2018</a>
+                        <a href="#" id="foot"><i class="uil uil-calender"></i>Aug 7,2018</a>
                         <a href="#" id="foot"><i class="uil uil-comment"></i>5 Comments</a>
                     </div>
                 </div>
@@ -303,8 +326,8 @@
                     <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
                         unorthographic.</p>
                     <div class="date">
-                        <a href="#"id="foot"><i class="uil uil-calender"></i>Aug 7,2018</a>
-                        <a href="#"id="foot"><i class="uil uil-comment"></i>5 Comments</a>
+                        <a href="#" id="foot"><i class="uil uil-calender"></i>Aug 7,2018</a>
+                        <a href="#" id="foot"><i class="uil uil-comment"></i>5 Comments</a>
                     </div>
                 </div>
             </div>
@@ -315,8 +338,8 @@
                     <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
                         unorthographic.</p>
                     <div class="date">
-                        <a href="#"id="foot"><i class="uil uil-calender"></i>Aug 7,2018</a>
-                        <a href="#"id="foot"><i class="uil uil-comment"></i>5 Comments</a>
+                        <a href="#" id="foot"><i class="uil uil-calender"></i>Aug 7,2018</a>
+                        <a href="#" id="foot"><i class="uil uil-comment"></i>5 Comments</a>
                     </div>
                 </div>
             </div>
@@ -324,36 +347,35 @@
     </section>
     <!-- Section6 ends-->
     <!-- Section7 begins-->
-    <section class="section7">
+    <section class="section7" id="contact">
         <h1>Get In <span>TOUCH</span></h1>
-        <div class="heads">
-        <h2>Get In Touch</h2>
-        <h2>My Contact Details</h2>
-    </div>
-        <div class="form">
-            <form>
-                <input type="text" name="Your Name" id="" placeholder="Your Name">
-                <input type="text" name="" id="" placeholder="Your Email">
-                <input type="text" name="" id="" placeholder="Your Phone-no">
-                <textarea placeholder="Write A Message" name="" id=""></textarea>
-                <button>SEND MESSAGE</button>
-            </form>
-        
-        <div class="contacts">
-            <h5>EMAIL</p>
-                <p>Obisikemaxwell@gmail.com</p>
-                <h5>PHONE</h5>
-                <p>+234 902 6575 211</p>
-                <h5>FAX</h5>
-                <p>+234 816 0635 587</p>
-                <h5>ADDRESS</h5>
-                <p>Governors RD Ikotun Lagos</p>
+        <div class="container">
+            <div class="item">
+                <h2 class="h2" >Get In Touch</h2>
+                <form>
+                    <input type="text" name="Your Name" id="" placeholder="Your Name">
+                    <input type="text" name="" id="" placeholder="Your Email">
+                    <input type="text" name="" id="" placeholder="Your Phone-no">
+                    <textarea placeholder="Write A Message" name="" id=""></textarea>
+                    <button>SEND MESSAGE</button>
+                </form>
+            </div>
+            <div class="contacts">
+                <h2 id="h2">My Contact Details</h2>
+                <h5>EMAIL</p>
+                    <p>Obisikemaxwell@gmail.com</p>
+                    <h5>PHONE</h5>
+                    <p>+234 902 6575 211</p>
+                    <h5>FAX</h5>
+                    <p>+234 816 0635 587</p>
+                    <h5>ADDRESS</h5>
+                    <p>Governors RD Ikotun Lagos</p>
+            </div>
         </div>
-    </div>
     </section>
     <!-- Section7 ends-->
-     <!-- footer ends-->
-      <footer>
+    <!-- footer ends-->
+    <footer>
         <p>Copyright 2024 &#169 All Right Reserved|Coded by Maxwell&#128151</p>
         <div>
             <i class="uil uil-facebook-f"></i>
@@ -362,8 +384,9 @@
             <i class="uil uil-linkedin"></i>
             <i class="uil uil-github"></i>
         </div>
-      </footer>
-      <!-- footer ends-->
+    </footer>
+    <!-- footer ends-->
 </body>
+<script src="./Assets/JS/main.js"></script>
 
 </html>
