--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- The Header begins -->
     <header class="overlay" id="home">
-        <section class="overlay">
+        <section>
             <nav class="show">
                 <ul>
                     <li><a href="#home" class="linktext">HOME</a></li>
@@ -49,7 +49,7 @@
     <!-- The Header ends-->
 
     <!-- Secotion1 Begins-->
-    <section class="section1" id="portfolio">
+    <section class="section1 to-reveal" id="portfolio">
         <h1>Featured <span>Portfolio</span></h1>
         <ul>
             <li><a href="#">All</a></li>
