--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- The Header begins -->
-    <header class="overlay" id="home">
+    <header id="home">
         <section>
             <nav class="show">
                 <ul>
@@ -56,7 +56,7 @@
             <li><a href="##">Packaging</a></li>
             <li><a href="###">Mockup</a></li>
             <li><a href="####">Typography</a></li>
-            <li><a href="######">Photograpy</a></li>
+            <li><a href="######" id="Photograpy">Photograpy</a></li>
         </ul>
         <div class="grids">
             <div class="griditems">
